# mineshare

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  main.yml
src/: client.rs  lib.rs  main.rs  server.rs  wordlist.rs
