[package]
name = "mineshare"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
governor = "0.10.0"
rand = "0.9.1"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync", "signal"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"


