[package]
name = "mineshare"
version = "0.3.0"
authors = ["Gabeperson"]
description = "A small, no portforwarding reverse proxy app for small Minecraft servers"
repository = "https://github.com/Gabeperson/mineshare"
license = "Apache-2.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
governor = "0.10.0"
postcard = "1.1.3"
rand = "0.9.1"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync", "signal"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[[bin]]
name = "mineshare_server"
path = "src/server.rs"

[[bin]]
name = "mineshare"
path = "src/client.rs"


